# fischer

./: AI_INTEGRATION.md  LICENSE  README.md
backend/: .env.example  .gitignore  README.md  ai_analysis_service.py  document_ingestion.py  firebase_config.py  firebase_utils.py  main.py  pyproject.toml  rag_service.py  web_enrichment.py
backend/rag_store/: 26d32bb3-2cf9-4171-b236-61bf98972969.json
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/ai-analysis/: route.ts
frontend/app/api/applications/: route.ts
frontend/app/api/applications/[id]/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/enrich/[id]/: route.ts
frontend/app/apply/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/[id]/: page.tsx
frontend/components/: glowing-effect-demo.tsx
frontend/components/animated/: fischer-gemini-background.tsx  glowing-effect-demo.tsx  google-gemini-effect.tsx  index.ts
frontend/components/dashboard/: chat-interface.tsx  company-details.tsx  index.ts
frontend/components/ui/: glowing-effect.tsx  index.ts
frontend/public/: mock-applications.json
test_upload/: founders_checklist.docx
