[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "uvicorn[standard]>=0.22.0",
    "httpx[standard]>=0.24.0",
    "pydantic[standard]>=1.10.0",
    "firebase-admin>=6.6.0",
]