[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "uvicorn[standard]>=0.22.0",
    "httpx[standard]>=0.24.0",
    "pydantic[standard]>=1.10.0",
    "firebase-admin>=6.6.0",
    "python-dotenv>=1.1.1",
    "aiofiles>=24.1.0",
    "google-generativeai>=0.8.5",
    "beautifulsoup4>=4.12.2",
    "lxml>=5.3.0",
    "duckduckgo-search>=5.3.0",
    "numpy>=1.26.0",
]
